# SmartLabel

./: .gitignore  BUILD_EXE.bat  CHANGELOG.md  README.md  SETUP_NEW_PC.md  START_PRINTER.bat  USER_MANUAL.md  batch-G-31.json  count-hidden.js  get-schema.js  middleware.ts  out.txt  package-lock.json  package.json  query-batch.js  schema.json  task.md  test-kits.js  test-output.json  test-output2.json  test-output3.json  test-output4.json  test-query.js  test-query2.js  test-query3.js  test-query4.js
actions/: auth.ts  batch.ts  lc.ts  strain.ts
app/: globals.css  layout.tsx  page.tsx
components/: automation-trigger.tsx
lib/: parseScanCode.ts
mushroom-mvp/: USER_MANUAL.md  package-lock.json  package.json
mushroom-mvp/print-service/: README.md  app.py  label_generator.py  printer.py  pyproject.toml
print-service/: CODE_COMPARISON.md  CORRECAO_FINAL.md  CORRECTIONS_APPLIED.md  LABEL_SIZES_GUIDE.md  MushroomPrintService.spec  PROTOCOL_ANALYSIS.md  QUICK_TEST_GUIDE.md  README.md  SOLUTION_FINAL.md  SOLUTION_SUMMARY.md  TESTE_IMPRESSAO.md  app.py  auto_updater.py  build_exe.py  create_release.py  debug_bitmap.py  debug_output.py  debug_packet.py  diagnose_ble.py  find_niimbot_usb.py  get_printer_info.py  inspect_niim.py  label_generator.py  make_test.py  niimbot_b1_ble_fixed.py  printer.py  printer_b1_test.py  printer_diagnostic.py  printer_final.py  printer_fixed.py  printer_niimblue_wrapper.py  printer_usb.py  printer_working.py  requirements.txt  spy_bluetooth.py  test_bit_inversion.py  test_block.py  test_corrections.py  test_dimension_formats.py  (+19 more)
(+42 files in other folders)
